<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/GreyOne"
      android:orientation="vertical" >
  
      <TextView
          android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:paddingTop="14dp"
         android:text="@string/warring"
         android:textColor="@color/blue"
         android:textSize="18sp" />
      <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="150dp">
           <RelativeLayout
            android:id="@+id/base_dialog_layout"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/dialog_title_bg" >
             <TextView
                android:id="@+id/base_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textSize="20sp" />
            </RelativeLayout> 
            
        <TextView
            android:id="@+id/file_content_name"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/base_dialog_layout"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/ExitInfo"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <View
            android:id="@+id/lan_view_line0"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/file_content_name"
            android:background="@color/DrakGrey" />

        <Button
            android:id="@+id/base_dialog_set_ok"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/lan_view_line0"
            android:background="@drawable/dialog_left_btn_bg"
            android:gravity="center"
            android:text="@string/OK"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <View
            android:id="@+id/login_view_line1"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/base_dialog_set_ok"
            android:layout_alignTop="@+id/base_dialog_set_ok"
            android:layout_toRightOf="@+id/base_dialog_set_ok"
            android:background="@color/DrakGrey" />

        <Button
            android:id="@+id/base_dialog_set_cancel"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lan_view_line0"
            android:background="@drawable/dialog_right_btn_bg"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/blue"
            android:textSize="18sp" />
     </RelativeLayout>
    
 
 </LinearLayout>
